# docs-example

./: mkdocs.yml  pyproject.toml  validate_test.py
docs/: 404.html  explanation.md  index.html  index.md  objects.inv  sitemap.xml  tutorials.md
docs/explanation/: index.html
docs/how-to-guides/: index.html
docs/reference/: index.html
docs/search/: search_index.json
docs/tutorials/: index.html
mkdocs/: README.md  explanation.md  how-to-guides.md  reference.md
site/: index.html  objects.inv  sitemap.xml
site/explanation/: index.html
site/how-to-guides/: index.html
site/tutorials/: index.html
src/calculator/: __init__.py  calculations.py  df_calculations.py
test_report/: index.html
tests/: conftest.py  test_calculations.py  test_df_calculations.py
