[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator"
readme = "README.md"
authors = [
    { name = "Chad Goymer", email = "chad.goymer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
]
