[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator"
readme = "README.md"
authors = [
    { name = "Chad Goymer", email = "chad.goymer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandera[polars]>=0.22.1",
    "polars>=1.21.0",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
]
